Popup z-indexing fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,10 @@ html { font-family: 'Inter', sans-serif !important; }
   }
 }
 
+.z-1000 {
+  z-index: 1000;
+}
+
 html, body, #__next {
     color: #4D4D4D;
     height: 100%;
